// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button applies large size 1`] = `
<div>
  <a
    class="justify-center inline-flex items-center rounded-xl text-center border border-blue-400 transition-colors delay-50 bg-blue-400 text-white hover:enabled:bg-blue-700 min-w-32 h-full min-h-12 text-lg py-2.5 px-6"
    href="#"
  >
    Click me
  </a>
</div>
`;

exports[`Button applies primary intent 1`] = `
<div>
  <a
    class="justify-center inline-flex items-center rounded-xl text-center border border-blue-400 transition-colors delay-50 bg-blue-400 text-white hover:enabled:bg-blue-700 min-w-32 h-full min-h-12 text-lg py-2.5 px-6"
    href="#"
  >
    Click me
  </a>
</div>
`;

exports[`Button applies secondary intent 1`] = `
<div>
  <a
    class="justify-center inline-flex items-center rounded-xl text-center border border-blue-400 transition-colors delay-50 bg-transparent text-blue-400 hover:enabled:bg-blue-400 hover:enabled:text-white min-w-32 h-full min-h-12 text-lg py-2.5 px-6"
    href="#"
  >
    Click me
  </a>
</div>
`;

exports[`Button applies small size 1`] = `
<div>
  <a
    class="justify-center inline-flex items-center rounded-xl text-center border border-blue-400 transition-colors delay-50 bg-blue-400 text-white hover:enabled:bg-blue-700 min-w-20 h-full min-h-10 text-sm py-1.5 px-4"
    href="#"
  >
    Click me
  </a>
</div>
`;

exports[`Button applies underline when specified 1`] = `
<div>
  <a
    class="justify-center inline-flex items-center rounded-xl text-center border border-blue-400 transition-colors delay-50 bg-blue-400 text-white hover:enabled:bg-blue-700 min-w-32 h-full min-h-12 text-lg py-2.5 px-6 underline"
    href="#"
  >
    Click me
  </a>
</div>
`;

exports[`Button merges custom className with default classes 1`] = `
<div>
  <a
    class="justify-center inline-flex items-center rounded-xl text-center border border-blue-400 transition-colors delay-50 bg-blue-400 text-white hover:enabled:bg-blue-700 min-w-32 h-full min-h-12 text-lg py-2.5 px-6 custom-class"
    href="#"
  >
    Click me
  </a>
</div>
`;

exports[`Button renders with default props 1`] = `
<div>
  <a
    class="justify-center inline-flex items-center rounded-xl text-center border border-blue-400 transition-colors delay-50 bg-blue-400 text-white hover:enabled:bg-blue-700 min-w-32 h-full min-h-12 text-lg py-2.5 px-6"
    href="#"
  >
    Click me
  </a>
</div>
`;
